# libgphoto2

./: configure.ac  makefile.am  meson_options.txt
.github/workflows/: ccpp.yml
camlibs/: Makefile.am
camlibs/CODETOPORT/: FileofAllClassesinImageTransmitter2.txt
camlibs/PentaxChatGPT/: Makefile-file  Pentax.h  Readme.doc  makefile-files  makefile.am  pentax.c  pentax.h
camlibs/PentaxDeepSeek/: makefile.make  pentax_astrotracer.c  pentax_bulb_mode.c  pentax_camera_init.c  pentax_capture_modes.c  pentax_enums.h  pentax_file_manipulation.c  pentax_live_view.c  pentax_mirror_up.c  pentax_ptp_commands.h  readme.doc
camlibs/pentax/: Makefile-files  js0n.c  library.c  meson.build  pslr.c  pslr_log.h
camlibs/pentaxmodern/: Makefile.am  library.c  meson.build  pentaxmodern.c  pentaxmodern.h  readme.txt
camlibs/ptp2/: library.c
