# --- usual header ---
lib_LTLIBRARIES = libgphoto2_cam_pentaxmodern.la

libgphoto2_cam_pentaxmodern_la_SOURCES = \
    pentaxmodern.c \
    pentaxmodern.h

# (if you have any extra CPPFLAGS or LIBADD, list them here)
# e.g.
# AM_CPPFLAGS = -I$(top_srcdir)/include
# libgphoto2_cam_pentaxmodern_la_LIBADD = …  

# --- optional install hooks, tests, etc. ---
